--- a/common-lib/pom.xml
+++ b/common-lib/pom.xml
@@ -16,14 +16,19 @@
     <description>Shared utilities and common classes</description>
 
     <dependencies>
+        <!-- Spring Boot Starter Web - Required for ResponseEntity, HttpStatus -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        
+        <!-- Spring Boot Starter Validation -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        
+        <!-- Jackson Annotations -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
