--- a/transport-service/pom.xml
+++ b/transport-service/pom.xml
@@ -77,11 +77,22 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- PDF Generation -->
+        <!-- PDF Generation - Fixed iText dependencies -->
         <dependency>
             <groupId>com.itextpdf</groupId>
-            <artifactId>itext7-core</artifactId>
-            <version>7.2.5</version>
+            <artifactId>itext-core</artifactId>
+            <version>8.0.2</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>kernel</artifactId>
+            <version>8.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>layout</artifactId>
+            <version>8.0.2</version>
         </dependency>
 
         <!-- Excel Generation -->
